css/style.css
@font-face {
  src: url(../fonts/Luna.ttf);
  font-family: Luna;
}
@font-face {
  src: url(../fonts/JosefinSlab-Bold.ttf);
  font-family: JSRB;
}
@font-face {
  src: url(../fonts/JosefinSlab-SemiBold.ttf);
  font-family: JSRSB;
}
@font-face {
  src: url(../fonts/PatrickHandSC-Regular.ttf);
  font-family: PHR;
}

body, html{
  height:100%;
  margin:0;
  font-size:20px;
  font-family:PHR;
  font-weight:400;
  line-height:1.5em;
  color:#666;
}


header{
  height: 100vh;
}

.pimg1, .pimg2, .pimg3{
  position:relative;
  background-position:center;
  background-size:cover;
  background-repeat:no-repeat;

  /*
    fixed = parallax
    scroll = normal
  */
  background-attachment:fixed;
}

.pimg1{
  background-image:url('../img/image1.jpg');
  min-height:100%;
  opacity:0.70;
  z-index: auto;
}

.pimg2{
  background-image:url('../img/image2.jpg');
  min-height:100%;
  z-index: auto;
}

.pimg3{
  background-image:url('../img/image3.jpg');
  opacity:0.70;
  min-height:65%;
  z-index: auto;
}

.section{
  text-align:center;
  padding:1px 10px;
}

.section-dark{
  background-color:#282e34;
  color:#ddd;
}


nav{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100px;
  padding: 10px 100px;
  box-sizing: border-box;
}

nav .logo{

  padding: 22px 20px;
  margin-left: 1%;
  margin-top: 50px;
  height: 80px;
  float: left;
  z-index: 3;
  size: 5px;
}

nav .logo img{


  width: 30%;
  opacity: 0.6;
}
nav .logo img:hover{
  background-color: rgba(255, 255, 255, 0.5);
  border-radius: 10px;
}

nav .logo img:active{
  background-color: rgba(28, 230, 120, 0.5);
}

nav ul{
  list-style: none;
  float: right;
  margin-right: 30px;
  margin-top: 60px;
  padding: 0;
  display: flex;
}

nav li{
  list-style: none;

}

nav ul li a {
  line-height: 80px;
  color: #FFF;
  padding: 12px 40px;
  text-decoration: none;
  text-transform: uppercase;
  background-color: rgba(128, 128, 128, 0.5);
  border-radius: 1px;
}

nav ul li a:focus{
  outline: none;
}

nav ul li a:hover{
  background-color: rgba(255, 255, 255, 0.5);
  color: #000;
}

nav ul li a:active{
  background-color: rgba(28, 230, 120, 0.5);
}



.Title{
  position:absolute;
  top:23%;
  width:100%;
  text-align:left;
  padding-left: 8%;
  color:#4c4c4c;
  font-family:PHR;
  font-weight: bold;
  font-size:50px;
  letter-spacing:8px;
  text-transform:uppercase;
  display: inline-block;
  vertical-align: middle;
}

.Title img{
  display: inline-block;
  vertical-align: middle;
  width: 10%;
  opacity: 1.0;
  border-radius: 60%;
}

.Intro{
  position:absolute;
  top:44%;
  width:100%;
  text-align:left;
  padding-left: 8%;
  color:#4c4c4c;
  font-family: JSRSB;
  font-size:24px;
}

.Intro ul p{
  margin: 0;
}


.Intro .border{
  background-color: #111;
  color: #FFFFFF;
  padding: 15px;
}

.Intro .border.trans{
  background-color:transparent;

}

.title-about{
  font-size: 30px;
  font-family: JSRB;
  letter-spacing: 4px;
  font-weight: bold;
  margin-bottom: 20px;
}

.body-about{
  margin-top: 20px;
  font-size: 20px;
  font-family: JSRSB;
  letter-spacing: 3px;
}

.body-resume{
  display: inline-block;
  vertical-align: middle;
  font-size: 20px;
  font-family: JSRSB;
  letter-spacing: 3px;
}



.body-resume img{
  display: inline-block;
  vertical-align: middle;
  width: 28px;
}
.body-resume img:hover{
  background-color: rgba(128, 128, 128, 0.5);
  border-radius: 5px;
}
.body-resume-link{
  text-decoration: none;
  color: #666;
}


.contact{
  position:absolute;
  top: 30%;
  left: 50%;
  transform: translate(-50%,-30%);

}

.contact a{
  display: inline-block;
  width: 70px;
  height: 70px;
  color: #000;
  margin: 50px;
  justify-content: center;
  align-items: center;
  font-size: 70px;
}

.contact a:active{
  color: white;
}
.contact a:hover{
  color: #666;
}

.wrapper-contact{
  position: absolute;
  top: 50%;
  left: 50%;
  color: #000;
  letter-spacing: 8px;
  transform: translate(-50%, -50%);
}


.title-icon{
  margin: 20px 0;
  font-size: 20px;
  font-family: JSRSB;
}

.title-icon img{
  line-height: 1px;
  width: 30px;
  margin-top: 20px 0;
}

.title-icon2{
  display: inline-block;
  vertical-align: middle;
  margin: 20px 0;
  font-size: 20px;
  font-family: JSRSB;
}

.title-icon2 img{
  display: inline-block;
  vertical-align: middle;
  line-height: 1px;
  width: 30px;
  margin-top: 20px 0;
}

.section2{
  position:absolute;
  top: 30%;
  left: 50%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  transform: translate(-50%,-30%);
  grid-gap: 5%;

}


.card1 {
  /* Add shadows to create the "card" effect */
  width: 100%;
  vertical-align: middle;
  justify-content: center;
  align-items: center;
  border-radius: 2px;
  z-index: 10;

}

.card1 img{
  width: 100%;
  display: block;
  margin-left: auto;
  margin-top: auto;
  margin-right: auto;
  box-shadow: 5px 5px 10px black;
  border-radius: 5px;
}

.card1:hover .overlay{
  bottom: 0;
  height: 100%;
}

.overlay{
  position: absolute;
  bottom: 100%;
  left: 0;
  right: 0;
  /*background-color:  rgba(227, 227, 227, 0.5);*/
  background-color:  white;
  overflow: hidden;
  border-radius: 5px;
  grid-column-start: 1;
  grid-column-end: 2;
  width: 100%;
  height:0;
  transition: .5s ease;
}

.card1:hover .overlay2{
  bottom: 0;
  height: 100%;
}

.overlay2{
  position: absolute;
  bottom: 100%;
  left: 0;
  right: 0;
  /*background-color:  rgba(227, 227, 227, 0.5);*/
  background-color:  white;
  overflow: hidden;
  border-radius: 5px;
  grid-column-start: 2;
  grid-column-end: 3;
  width: 100%;
  height:0;
  transition: .5s ease;
}

.card1:hover .overlay3{
  bottom: 0;
  height: 100%;
}

.overlay3{
  position: absolute;
  bottom: 100%;
  left: 0;
  right: 0;
  /*background-color:  rgba(227, 227, 227, 0.5);*/
  background-color:  white;
  overflow: hidden;
  grid-column-start: 3;
  grid-column-end: 4;
  border-radius: 5px;
  width: 100%;
  height:0;
  transition: .5s ease;
}

.overlay a{
  color: black;
  font-size: 300%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.overlay a:hover{
  color: rgb(153,50,204);
}


.overlay-text-title {
  color: black;
  font-size: 35px;
  position: absolute;
  top: 15%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}
.overlay-text {
  color: black;
  font-size: 20px;
  position: absolute;
  top: 30%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.overlay a{
  color: black;
  font-size: 300%;
  position: absolute;
  top: 70%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.overlay a:hover{
  color: rgb(153,50,204);
}




.overlay2 a{
  color: black;
  font-size: 300%;
  position: absolute;
  top: 70%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.overlay2 a:hover{
  color: rgb(153,50,204);
}

.overlay3 a{
  color: black;
  font-size: 300%;
  position: absolute;
  top: 70%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.overlay3 a:hover{
  color: rgb(153,50,204);
}


.overlay-text-title {
  color: black;
  font-size: 35px;
  position: absolute;
  top: 15%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}
.overlay-text {
  color: black;
  font-size: 15px;
  position: absolute;
  top: 35%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}
.overlay-text-long {
  color: black;
  font-size: 15px;
  position: absolute;
  top: 45%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}


@media(max-width:568px){
  .pimg1, .pimg2, .pimg3{
    background-attachment:scroll;
  }
}

